第二次提交

--- a/index.html
+++ b/index.html
@@ -41,16 +41,17 @@
             bottom: 0;
         }
 
-        #wrap div.ball img{
+        #wrap div.ball img {
             left: 50%;
             top: 50%;
             margin-left: -15px;
             margin-top: -15px;
         }
 
-        #wrap div.person img{
+        #wrap div.person img {
             left: 50%;
             margin-left: -25px;
+            z-index: 999;
         }
     </style>
 </head>
@@ -62,13 +63,14 @@
     <script src="./data.js"></script>
     <script>
         /*
-            思路： 
+            思路:
             先创建地图，16*16，地图wrap的宽度和高度就等于个数*每个格子的大小。
             设置wrap的背景图片，会平铺，这样每个格子都有背景了。
             循环创建16*16个div塞进每个格子里，再塞图片进div里,
             div的位置根据index计算可以推出x和y， 
             循环关卡数组，根据对应的1234来填充对应的图片
-        
+
+            难点: x坐标和y坐标与i之间的相互转换,x = i % 横坐标个数, y = parseInt(i / 横坐标个数)
         
         */
         const Game = {
@@ -77,15 +79,15 @@
             },
             mapData,
             level: 0,
+            size: { x: 16, y: 16 },
             wrap: document.getElementById("wrap"),
             createMap(lv) {
-                const size = { x: 16, y: 16 },
-                    count = size.x * size.y;
+                const count = this.size.x * this.size.y;
                 let person,
                     div,
                     img;
-                this.wrap.style.width = size.x * 35 + 'px';
-                this.wrap.style.height = size.y * 35 + 'px';
+                this.wrap.style.width = this.size.x * 35 + 'px';
+                this.wrap.style.height = this.size.y * 35 + 'px';
 
                 //创建16*16的格子
                 for (let i = 0; i < count; i++) {
@@ -99,6 +101,7 @@
                             appDiv(i);
                             img.src = './img/ball.png'; //球
                             div.className = 'ball';
+                            div.style.zIndex = 0;
                             break;
                         case 3:
                             appDiv(i);
@@ -114,11 +117,14 @@
                     }
                 }
                 function appDiv(i) {
-                    let x = i % size.x,
-                        y = parseInt(i / size.x);
+                    let x = i % Game.size.x,
+                        y = parseInt(i / Game.size.x);
                     div = document.createElement("div");
+                    div.x = x;
+                    div.y = y;
                     div.style.left = x * 35 + 'px';
                     div.style.top = y * 35 + 'px';
+                    div.style.zIndex = y * Game.size.x;
                     img = new Image();
                     div.appendChild(img);
                     this.wrap.appendChild(div);
@@ -127,8 +133,8 @@
             },
             controlPerson(op) {
                 let This = this,
-                parent = op.parentNode;
-                console.log(parent)
+                    parent = op.parentNode;
+                // console.log(parent)
                 document.onkeydown = function (ev) {
                     ev = ev || window.event;
                     const keyCode = ev.keyCode;
@@ -136,34 +142,84 @@
                         // ←
                         case 37:
                             op.src = './img/left.png';
-                            This.movePerson({x:-1})
+                            This.movePerson({ x: -1 }, parent)
                             break;
 
                         // ↑
                         case 38:
                             op.src = './img/up.png';
-                            This.movePerson({y:-1})
+                            This.movePerson({ y: -1 }, parent)
                             break;
 
                         // →
                         case 39:
                             op.src = './img/right.png';
-                            This.movePerson({x:1})
+                            This.movePerson({ x: 1 }, parent)
                             break;
 
                         // ↓
                         case 40:
                             op.src = './img/down.png';
-                            This.movePerson({y:1})
+                            This.movePerson({ y: 1 }, parent)
                             break;
                     }
-                    return false;
                 }
             },
-            movePerson(json){
+            movePerson(json, parent) {
                 let x = json.x || 0,
-                    y = json.y || 0;
+                    y = json.y || 0,
+                    boxs = document.getElementsByClassName("box"),
+                    that = this;
+                //人物移动的下一个点不能是树
+                if (this.mapData[this.level][(parent.x + x) + (parent.y + y) * this.size.x] !== 1) {
+                    parent.x += x;
+                    parent.y += y;
+                    parent.style.left = parent.x * 35 + 'px';
+                    parent.style.top = parent.y * 35 + 'px';
+                    parent.style.zIndex = parent.y * this.size.x;
+                    [...boxs].forEach(item => {
+                        //人物和箱子撞上了
+                        if (item.x === parent.x && item.y === parent.y) {
+                            //箱子移动的下一点不能是树和箱子
+                            if (this.mapData[that.level][(item.x + x) + (item.y + y) * that.size.x] !== 1
+                                && this.mapData[that.level][(item.x + x) + (item.y + y) * that.size.x] !== 3) {
+                                that.pz(item, parent, '+', x, y);
+                                that.isVictory();
+                            } else { //人物不动
+                                that.pz(item, parent, '-', x, y);
+                            }
+                        }
+                    })
+                }
+            },
+            pz(item, parent, direction, x, y) { // 箱子,人物,方向,箱子的x,箱子的y
+                if (direction === '+') {
+                    item.x += x;
+                    item.y += y;
+                    item.style.left = item.x * 35 + 'px';
+                    item.style.top = item.y * 35 + 'px';
+                    item.style.zIndex = item.y * this.size.x;
+                } else {
+                    parent.x -= x;
+                    parent.y -= y;
+                    parent.style.left = parent.x * 35 + 'px';
+                    parent.style.top = parent.y * 35 + 'px';
+                    parent.style.zIndex = parent.y * this.size.x;
+                }
+            },
+            isVictory(){
+                let boxs = document.getElementsByClassName("box"),
+                    balls = document.getElementsByClassName("ball"),
+                    num = 0;
+
+                [...boxs].forEach((item,index) => {
+                    if(item.x === balls[index].x && item.y === balls[index].y){
+                        num ++ ;                        
+                    }
+                })
+                if(num === boxs.length) alert("1111")
             }
+
         }
 
         window.onload = function () {
